--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.7.1",
+    "firestore": "^1.1.6",
     "fontawesome": "^5.6.3",
     "formik": "^2.4.5",
     "localforage": "^1.10.0",
